--- a/client/index.html
+++ b/client/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/logof.svg" />
+    <link rel="icon" type="image/png" href="https://cdn-icons-png.flaticon.com/512/2232/2232688.png" />
     <link
   href="https://fonts.googleapis.com/css2?family=Montserrat:wght@700&display=swap"
   rel="stylesheet"
